# wybra

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  vulture_whitelist.py
.bin/: authmgr  git-status  migrate  routes  runserver  validate
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: claude-review.yml  codeql.yml  dependabot-automerge.yml  tests.mermaid  tests.yml
docs/: APPLE_AUTH.md  BUILTIN_FORMS.md  CACHE.md  CONTENT_TYPES.md  CREDENTIAL_REFERENCES.md  DATABASE_CONFIG.md  DEBUG.md  ENV_VARS.md  EVENTS.md  GITHUB_AUTH.md  GOOGLE_AUTH.md  MESSAGES.md  PASSKEY_AUTH.md  SCOPES.md  SECRET_KEY.md  SECRET_ROTATION.md  SESSION.md  TESTCONTAINERS.md  TEST_UTILITIES.md  WINDOWS.md
scripts/: smoke_runserver.py  wybra_source.py
src/auth_ext/: __init__.py  bootstrap.py  challenges.py  context.py  database.py  delivery.py  identitymgr.py  management.py  manager.py  options.py  passwords.py  persistence.py  result.py  routes.py  schemas.py  sessions.py  settings.py  timestamps.py  usermgr.py
src/auth_ext/migrations/: README.md
src/auth_ext/models/: __init__.py
src/auth_ext/sqlalchemy/: __init__.py  models.py  sessions.py  users.py
src/data_core/: __init__.py  database_urls.py  migrate.py  migration_metadata.py  persistence.py  surfaces.py
src/data_core/migrations/: README.md  env.py
src/tools/: __init__.py  migrate.py  project.py  runserver.py  validate.py
src/tools/validation/: __init__.py  core.py  registry.py
src/web_core/: __init__.py  composition.py  context.py  csrf.py  dispatcher.py  errors.py  renderer.py  route_contract.py  routes.py  routing.py  settings.py  static.py  surfaces.py  templates.py  theme.py  validation.py  views.py
src/wevra/: __init__.py  site.py  site_config.py
src/wevra/auth/: __init__.py  capabilities.py  configuration.py  context.py  delivery.py  email_normalisation.py  emails.py  ids.py  options.py  profile.py  provider_credentials.py  result.py  sessions.py  settings.py  validation.py
src/wevra/config/: __init__.py  service.py  settings.py  sources.py  transforms.py  types.py
src/wevra/core/: __init__.py  asgi.py  composition.py  config.py  conventions.py  environment.py  exceptions.py  runtime.py  settings.py
src/wevra/db/: __init__.py  capabilities.py  config.py  migrate.py  migration_metadata.py  persistence.py  provisioning.py  surfaces.py  urls.py  validation.py
src/wevra/media/: __init__.py  capabilities.py  config.py  models.py  validation.py
src/wevra/profile/: __init__.py  capabilities.py  models.py  validation.py
src/wevra/services/: __init__.py  crypto.py
src/wevra/tools/: __init__.py  migrate.py  project.py  routes.py  runserver.py  settings.py  validate.py
src/wevra/utils/: __init__.py  paths.py
src/wevra/web/: __init__.py  config.py  context.py  csrf.py  security.py  style_contract.py
src/wevra/widgets/: __init__.py  config.py  context.py  features.py  login.py  routes.py  theme.py  validation.py
src/wybra/: __init__.py  assets.py  content_types.py  diagnostics_config.py  errors.py  events.py  events_config.py  events_middleware.py  scopes.py  site.py  site_config.py  testing.py  testing_pytest.py
src/wybra/api/: __init__.py  capabilities.py  config.py  settings.py  validation.py
src/wybra/assets/: __init__.py  capabilities.py  collection.py  config.py  serving.py  settings.py  storage.py  validation.py
src/wybra/auth/: __init__.py  capabilities.py  context.py  delivery.py  emails.py  events.py  forms.py  ids.py  models.py  options.py  provider_credentials.py  provider_secrets.py  provider_support.py  result.py  session_tokens.py  sessions.py  settings.py  validation.py
src/wybra/cache/: __init__.py  capabilities.py  config.py  settings.py  setup.py
src/wybra/config/: __init__.py  credentials.py  service.py  settings.py  sources.py  transforms.py  types.py
src/wybra/core/: __init__.py  asgi.py  asset_config.py  composition.py  config.py  conventions.py  diagnostics.py  environment.py  exceptions.py  logging.py  module_discovery.py  modules.py  resources.py  runtime.py  settings.py  url_paths.py
src/wybra/db/: __init__.py  alembic_attributes.py  capabilities.py  config.py  events.py  exceptions.py  fields.py  indexes.py  migrate.py  migration_metadata.py  models.py  persistence.py  provisioning.py  query.py  routing.py  settings.py  signals.py  sql.py  surfaces.py  tortoise.py  types.py  urls.py  validation.py  versioning.py
src/wybra/diagnostics/: __init__.py  capabilities.py  context.py  debug.py  event_projection.py  events.py  levels.py  logging.py  middleware.py  records.py  settings.py  setup.py  sqlalchemy.py  tortoise.py
src/wybra/errors/: __init__.py  capabilities.py  config.py  debug.py  handlers.py  mappings.py  validation.py
tests/: conftest.py  dummy_invalid_metadata.py  dummy_missing_dependency.py  dummy_no_metadata.py  provider_test_keys.py  support_database.py  test_api.py  test_app_startup.py  test_auth_forms.py  test_auth_ids.py  test_auth_import_boundaries.py  test_authmgr.py  test_cache.py  test_config_service.py  test_content_types.py  test_core_asgi.py  test_core_environment.py  test_core_exceptions.py  test_csrf.py  test_db_events.py  test_db_fields.py  test_db_signals.py  test_debug_api.py  test_debug_cli.py  test_diagnostic_context.py  test_diagnostics.py  test_diagnostics_capabilities.py  test_error_debug.py  test_error_mappings.py  test_event_dispatch.py  test_events.py  test_forms.py  test_identitymgr.py  test_logging_config.py  test_media.py  test_messages.py  test_migrate.py  test_profile.py  test_providers.py  test_route_inspection.py  (+26 more)
tests_integration/: conftest.py  test_mssql_database_lifecycle.py  test_mysql_database_lifecycle.py  test_postgresql_database_lifecycle.py  test_redis_cache.py
tests_support/: __init__.py  database_containers.py  migration_lifecycle.py
tests_support/content_types/: __init__.py  models.py
tests_support/form_binding/: __init__.py  models.py
tests_support/migration_dependency/: __init__.py  models.py
(+408 files in other folders)
