[project]
name = "wybra"
version = "0.1.0"
description = "Reusable async FastAPI web, database, tooling, and auth framework components"
readme = "README.md"
authors = [
    { name = "David Nugent" }
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "click>=8.4.2",
    "cryptography>=49.0.0",
    "dateparser>=1.4.1",
    "dbscripts",
    "envex>=5.0.0",
    "fastapi>=0.138.1",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "jinja2>=3.1.6",
    "phonenumbers>=9.0.33",
    "pycountry>=26.2.16",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "starlette>=1.3.1",
    "uvicorn>=0.49.0",
]

[project.scripts]
wybra-authmgr = "wybra.auth.cli.authmgr:main"
wybra-collect = "wybra.tools.collect:main"
wybra-migrate = "wybra.tools.migrate:main"
wybra-routes = "wybra.tools.routes:main"
wybra-runserver = "wybra.tools.runserver:main"
wybra-validate = "wybra.tools.validate:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["wybra"]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.54",
]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
root = ["src"]

[tool.ty.src]
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.sources]
dbscripts = { git = "https://github.com/deeprave/dbscripts" }
