[project]
name = "wybra"
version = "0.1.0"
description = "Reusable async FastAPI web, database, tooling, and auth framework components"
readme = "README.md"
authors = [
    { name = "David Nugent" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "anyio>=4.14.2",
    "click>=8.4.2",
    "cryptography>=49.0.0",
    "dateparser>=1.4.1",
    "email-validator>=2.3.0",
    "envex>=5.0.0",
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "phonenumbers>=9.0.34",
    "pwdlib[argon2,bcrypt]==0.3.0",
    "pycountry>=26.2.16",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "qrcode>=8.0",
    "starlette>=1.3.1",
    "tortoise-orm>=1.1.7,<1.2.0",
    "uvicorn>=0.51.0",
    "webauthn>=3.0.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.43.48",
]
kms = [
    "boto3>=1.43.48",
]
keychain = [
    "keyring>=25.7.0",
]
vault = [
    "hvac>=2.4.0",
]
cache = [
    "redis>=8.0.1",
]
postgresql = [
    "asyncpg>=0.31.0",
]
psycopg = [
    "psycopg[binary,pool]>=3.3.4,<4.0.0",
]
mysql = [
    "aiomysql",
]
mariadb = [
    "aiomysql",
]
mssql = [
    "asyncodbc>=0.1.1,<1.0.0",
    "pyodbc",
]
oracle = [
    "asyncodbc>=0.1.1,<1.0.0",
    "pyodbc",
]
databases = [
    "aiomysql",
    "asyncodbc>=0.1.1,<1.0.0",
    "asyncpg>=0.31.0",
    "pyodbc",
    "psycopg[binary,pool]>=3.3.4,<4.0.0",
]

[project.scripts]
wybra-authmgr = "wybra.auth.cli.authmgr:main"
wybra-collect = "wybra.tools.collect:main"
wybra-migrate = "wybra.tools.migrate:main"
wybra-routes = "wybra.tools.routes:main"
wybra-runserver = "wybra.tools.runserver:main"
wybra-secret = "wybra.secrets.cli:main"
wybra-validate = "wybra.tools.validate:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["wybra"]

[dependency-groups]
dev = [
    "aiomysql>=0.3.2",
    "asyncodbc>=0.1.1",
    "asyncpg>=0.31.0",
    "httpx2>=2.7.0",
    "pre-commit>=4.6.0",
    "psycopg[binary,pool]>=3.3.4,<4.0.0",
    "pyodbc>=5.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "testcontainers[mssql,mysql]>=4.14.2",
    "ty>=0.0.59",
]

[tool.ruff]
line-length = 88
src = ["src", "tests", "tests_integration", "tests_support"]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
root = ["src"]

[tool.ty.src]
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
